Footer alignment fix, about text change

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -821,7 +821,6 @@ footer span.copyright {
     text-transform: uppercase;
     text-transform: none;
     font-family: {{ site.data.template.font.primary }};
-    line-height: 40px;
 }
 
 footer ul.quicklinks {
